-fix bug in z-index

--- a/src/shared/Header.module.scss
+++ b/src/shared/Header.module.scss
@@ -9,6 +9,7 @@
 .wrapper {
   display: flex;
   align-items: center;
+  z-index: 10;
 }
 .logo {
   margin-right: 20px;
